namespace Bespoke.Enums
{
    public enum BespokeEvent
    {
        None,
        Touch,
        Grab,
        Release,
        Complete,
        TaskComplete,
        ObjectToPosition,
    }
}